fixing footer social links gap, to 16px

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -310,6 +310,7 @@
   margin: 0;
   display: flex;
   flex-direction: column;
+  row-gap: 16px;
 }
 
 .footer__list-item {
